apps/base/immich/app/immich.traefik.cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: route-immich
  namespace: traefik-system
  labels:
    networking.tinyrack.net/owner: immich
  annotations:
    networking.tinyrack.net/hosts: immich.intranet.winetree94.com
spec:
  description: Allow the internal Immich route and Garage access
  endpointSelector:
    matchLabels:
      io.cilium.k8s.namespace.labels.networking.tinyrack.net/isolation: enabled
      app.kubernetes.io/name: traefik
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: immich-system
            cnpg.io/cluster: immich-database-cluster
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            app.kubernetes.io/name: juicefs-mount
      toPorts:
        - ports:
            - port: "8443"
              protocol: TCP
  egress:
    - toServices:
        - k8sService:
            namespace: immich-system
            serviceName: immich-server
      toPorts:
        - ports:
            - port: "2283"
              protocol: TCP
